# photonbend

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.ipynb_checkpoints/: TesteNumba-checkpoint.ipynb  Untitled-checkpoint.ipynb
docs/: photonbend.html  scripts.md  search.js
docs/img/vftd/: NOTICE
docs/photonbend/: __main__.html  core.html  scripts.html  utils.html
docs/photonbend/core/: _shared.html  lens.html  projection.html  rotation.html
examples/: LICENSE  NOTICE
examples/original/: LICENSE  NOTICE
generated_docs/: index.html
generated_docs/photonbend/: scripts.html
generated_docs/photonbend/core/: projection.html  rotation.html
lightbend/: __main__.py  imaging.py  main.py  mapping.py  utils.py
lightbend/camera/: imaging.py
lightbend/conversion/: equirectangular.py  mercator.py  pano180.py
lightbend/conversion/circular_180/: half_height_pano.py  mercator.py
lightbend/core/: __init__.py  image_type.py  lens_image.py  projection_image.py  sphere_image.py
lightbend/exceptions/: coordinates_out_of_image.py
lightbend/lens/: __init__.py  lens.py
lightbend/projections/: equirectangular.py  half_height_pano.py  mercator.py
lightbend/scripts/: main.py
lightbend/scripts/commands/: __init__.py  alter_photo.py  make_pano.py  make_photo.py
lightbend/utils/: utils.py
notebooks/: TesteNumba2.ipynb
photonbend/: __init__.py  __main__.py
photonbend/core/: __init__.py  _lens_projection_image.py  _mapping_image.py  _panorama_projection_image.py  _rotation.py  _shared.py  lens.py  lens_projection_image.py  matrix_rotation.py  panorama_projection_image.py  projection.py  projection_image.py  rotation.py  temp_projection_image.py  utils.py
photonbend/core/__pycache__/: lens_projection_image._make_complex-30.py38.1.nbc  lens_projection_image._make_complex-30.py38.nbi
photonbend/core/_discontinued/: lens_image.py  lens_image_type.py  sphere_image.py
photonbend/core/protocols/: __init__.py  (+1 more)
photonbend/lens/: __init__.py  _lens.py  lens.py
photonbend/projections/: equirectangular.py
photonbend/scripts/: __init__.py  main.py
photonbend/utils/: __init__.py  _utils.py  utils.py
tests/core/: conftest.py  test_lens_image.py
(+5 files in other folders)
