[tool.poetry]
name = "photonbend"
version = "1.0.1"
description = "Photonbend allows one to convert photos between different sorts of lenses, rotate photos and make panoramas."
authors = ["Edson Moreira <w.moreirae@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Pillow = "^9.0.1"
numpy = "^1.22"
scipy = "^1.8.0"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.971"
pdoc = "^12.1.0"
black = "^22.8.0"
flake8 = "^5.0.4"
types-Pillow = "^9.2.1"

[tool.poetry.scripts]
photonbend = "photonbend.scripts.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/wmoreirae/photonbend"